--- a/frontend/public/assets/css/style.css
+++ b/frontend/public/assets/css/style.css
@@ -49,3 +49,28 @@ textarea{
     outline: none;
     cursor: pointer;
 }
+
+/* header AREA  */
+header.active_header  {
+opacity: 1;
+	box-shadow: 0px 5px 10px rgba(129, 129, 129, 0.5);
+	animation-name: animatenav;
+	animation-duration: 1s;
+	animation-fill-mode: both;
+	transition: 1s;
+	position: fixed;
+}
+@keyframes animatenav {
+	from {
+		opacity: 0;
+		-webkit-transform: translate3d(0, -100%, 0);
+		-moz-transform: translate3d(0, -100%, 0);
+		transform: translate3d(0, -100%, 0);
+	}
+	to {
+		opacity: 1;
+		-webkit-transform: none;
+		-moz-transform: none;
+		transform: none;
+	}
+}
