--- a/frontend/public/assets/css/style.css
+++ b/frontend/public/assets/css/style.css
@@ -20,8 +20,11 @@ body {
     font-family: 'Agdasima', sans-serif;
    
 }
-h1, h2, h3, h4, h5, h6, p,span, button{
+h1, h2, h3, h4, h5, h6,span, button{
     font-family: 'Agdasima', sans-serif;
+}
+p {
+	font-family: 'Lato', sans-serif !important;
 }
 img{
 	width: 100%;
