--- a/frontend/public/assets/css/style.css
+++ b/frontend/public/assets/css/style.css
@@ -25,6 +25,7 @@ h1, h2, h3, h4, h5, h6,span, button{
 }
 p {
 	font-family: 'Lato', sans-serif !important;
+	font-size: 14px;
 }
 img{
 	width: 100%;
@@ -33,6 +34,7 @@ img{
 }
 a{
     text-decoration: none;
+	font-family: 'Lato', sans-serif !important;
 }
 ul{
     list-style: none;
@@ -76,4 +78,22 @@ opacity: 1;
 		-moz-transform: none;
 		transform: none;
 	}
+}
+
+
+.form_imput .Mui-focused .MuiOutlinedInput-notchedOutline {
+    border-color: initial !important;
+    border-width: 1px !important;
+}
+.form_imput :hover .MuiOutlinedInput-notchedOutline {
+    border-color: rgba(0, 0, 0, 0.3) !important;
+}
+.form_imput .css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input{
+	padding: 10px 14px !important;
+}
+.form_imput .css-xfn8dw-MuiFormLabel-root-MuiInputLabel-root {
+    top: -6px;
+	color: rgb(255 255 255 / 80%);
+
+
 }
