--- a/frontend/public/assets/css/style.css
+++ b/frontend/public/assets/css/style.css
@@ -94,6 +94,18 @@ opacity: 1;
 .form_imput .css-xfn8dw-MuiFormLabel-root-MuiInputLabel-root {
     top: -6px;
 	color: rgb(255 255 255 / 80%);
-
-
+}
+.comment_input .Mui-focused .MuiOutlinedInput-notchedOutline {
+    border-color: initial !important;
+    border-width: 1px !important;
+}
+.comment_input :hover .MuiOutlinedInput-notchedOutline {
+    border-color: rgba(0, 0, 0, 0.3) !important;
+}
+.comment_input .css-1t8l2tu-MuiInputBase-input-MuiOutlinedInput-input{
+	padding: 10px 14px !important;
+}
+.comment_input .css-xfn8dw-MuiFormLabel-root-MuiInputLabel-root {
+    top: -6px;
+	color: #939598;
 }
