--- a/frontend/public/assets/css/style.css
+++ b/frontend/public/assets/css/style.css
@@ -94,6 +94,13 @@ opacity: 1;
 .form_imput .css-xfn8dw-MuiFormLabel-root-MuiInputLabel-root {
     top: -6px;
 	color: rgb(255 255 255 / 80%);
-
-
 }
+.form_imput .css-nxo287-MuiInputBase-input-MuiOutlinedInput-input {
+    padding: 10px 14px !important;
+    color: #fff;
+}
+.form_imput .css-dbtxhb-MuiInputBase-root-MuiOutlinedInput-root {
+    padding-right: 0;
+    background: #ffffff2b;
+}
+
