--- a/frontend/public/assets/css/style.css
+++ b/frontend/public/assets/css/style.css
@@ -23,6 +23,9 @@ body {
 h1, h2, h3, h4, h5, h6,span, button{
     font-family: 'Agdasima', sans-serif;
 }
+span{
+	text-transform: initial !important;
+}
 p {
 	font-family: 'Lato', sans-serif !important;
 	font-size: 14px;
@@ -134,3 +137,19 @@ opacity: 1;
 	padding: 16.5px 20px !important;
 }
 
+
+.ChatRoomLeftBar::-webkit-scrollbar  {
+	width: 8px;
+	background: #eeeeee;
+	border-radius: 10px;
+}
+
+.ChatRoomLeftBar::-webkit-scrollbar-thumb {
+	background: #d9d9d9;
+	border-radius: 10px;
+	min-height: 10px;
+	width: 5px;
+}
+.ChatRoomLeftBar::-webkit-scrollbar-thumb:hover {
+	background: #c2c2c2;
+}
