--- a/frontend/public/assets/css/style.css
+++ b/frontend/public/assets/css/style.css
@@ -160,3 +160,10 @@ opacity: 1;
 .css-raiz8k-MuiPaper-root-MuiAccordion-root:before {
 display: none !important;
 }
+.profile_input .MuiInputBase-root.MuiOutlinedInput-root.MuiInputBase-colorPrimary.MuiInputBase-fullWidth.MuiInputBase-formControl.MuiInputBase-sizeSmall.css-1fb3v6c-MuiInputBase-root-MuiOutlinedInput-root:hover .MuiOutlinedInput-notchedOutline {
+	border-color: var(--blue) !important;
+}
+.profile_input .MuiInputBase-root.MuiOutlinedInput-root.MuiInputBase-colorPrimary.MuiInputBase-fullWidth.MuiInputBase-formControl.MuiInputBase-sizeSmall.css-1fb3v6c-MuiInputBase-root-MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline {
+	border-color: var(--blue) !important;
+	border-width: 1px !important;
+}
