--- a/frontend/public/assets/css/style.css
+++ b/frontend/public/assets/css/style.css
@@ -212,3 +212,6 @@ display: none !important;
     color: #000 !important;
     opacity: 0.4 !important;
 }
+.comment_input input.MuiInputBase-input.MuiOutlinedInput-input.MuiInputBase-inputAdornedEnd.css-nxo287-MuiInputBase-input-MuiOutlinedInput-input{
+	color: #000;
+}
